--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,15 +1,13 @@
+@import 'fonts.css'
+
 * {
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-@import url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/web/JetBrainsMono-Regular.woff');
-
 :root {
-  --sans: 'Inter', sans-serif;
-  --serif: 'Merriweather', serif;
-  --mono: 'JetBrains Mono', monospace;
+  --sans: 'inter', sans-serif;
+  --serif: 'merriweather', serif;
+  --mono: 'jetbrains', monospace;
   --bg: #1f2124;
   --main: #6799F3;
   --lbg: #363A40;
